fixed the modal and backdrop on mobile bug

--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -1,6 +1,6 @@
 .Modal {
     position: fixed;
-    z-index: 1;
+    z-index: 1500;
     background-color: white;
     width: 70%;
     border: 1px solid #ccc;
